--- a/AutoAsparagus/AutoAsparagus.csproj
+++ b/AutoAsparagus/AutoAsparagus.csproj
@@ -39,6 +39,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutoAsparagus.cs" />
+    <Compile Include="ConsoleStuff.cs" />
+    <Compile Include="ASPStaging.cs" />
+    <Compile Include="ASPFuelLine.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
